# ros2-robot-validation

./: .gitignore  readme.md
examples/: minimal_spec.yaml
platform/rv_core/: pyproject.toml
platform/rv_core/rv_core/: cli.py  spec.py  utils.py
platform/rv_core/rv_core/orchestration/: readiness.py  sim_launcher.py
platform/rv_core/rv_core/telemetry/: recorder.py
